Build/third-party-libraries/packages/nuget.org/system.collections.immutable/6.0.0/readme.md
System.Collections.Immutable [6.0.0](https://www.nuget.org/packages/System.Collections.Immutable/6.0.0)
--------------------

Used by: MemoryPack, MessagePack

Target frameworks: net6.0, net8.0, net9.0, netstandard2.0, netstandard2.1

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [MIT](https://github.com/dotnet/runtime) 
- project license: [Unknown](https://dot.net/) 

Description
-----------
This package provides collections that are thread safe and guaranteed to never change their contents, also known as immutable collections. Like strings, any methods that perform modifications will not change the existing instance but instead return a new instance. For efficiency reasons, the implementation uses a sharing mechanism to ensure that newly created instances share as much data as possible with the previous instance while ensuring that operations have a predictable time complexity.

Commonly Used Types:
System.Collections.Immutable.ImmutableArray
System.Collections.Immutable.ImmutableArray<T>
System.Collections.Immutable.ImmutableDictionary
System.Collections.Immutable.ImmutableDictionary<TKey,TValue>
System.Collections.Immutable.ImmutableHashSet
System.Collections.Immutable.ImmutableHashSet<T>
System.Collections.Immutable.ImmutableList
System.Collections.Immutable.ImmutableList<T>
System.Collections.Immutable.ImmutableQueue
System.Collections.Immutable.ImmutableQueue<T>
System.Collections.Immutable.ImmutableSortedDictionary
System.Collections.Immutable.ImmutableSortedDictionary<TKey,TValue>
System.Collections.Immutable.ImmutableSortedSet
System.Collections.Immutable.ImmutableSortedSet<T>
System.Collections.Immutable.ImmutableStack
System.Collections.Immutable.ImmutableStack<T>

Remarks
-----------
no remarks


Dependencies 3
-----------

|Name|Version|
|----------|:----|
|[System.Memory](../../../../packages/nuget.org/system.memory/4.5.4)|4.5.4|
|[System.Memory](../../../../packages/nuget.org/system.memory/4.5.5)|4.5.5|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/6.0.0)|6.0.0|

*This page was generated by a tool.*