Build/third-party-libraries/packages/nuget.org/system.collections.immutable/8.0.0/readme.md
System.Collections.Immutable [8.0.0](https://www.nuget.org/packages/System.Collections.Immutable/8.0.0)
--------------------

Used by: ClientDI internal, Core internal, DesignTime internal, Emit internal, MessagePack, NerdbankMessagePack, SelfHost internal

Target frameworks: net10.0, net481, net8.0, net9.0, netstandard2.0

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [MIT](https://github.com/dotnet/runtime) 
- project license: [Unknown](https://dot.net/) 

Description
-----------
This package provides collections that are thread safe and guaranteed to never change their contents, also known as immutable collections. Like strings, any methods that perform modifications will not change the existing instance but instead return a new instance. For efficiency reasons, the implementation uses a sharing mechanism to ensure that newly created instances share as much data as possible with the previous instance while ensuring that operations have a predictable time complexity.

The System.Collections.Immutable library is built-in as part of the shared framework in .NET Runtime. The package can be installed when you need to use it in other target frameworks.

Dependencies 5
-----------

|Name|Version|
|----------|:----|
|[System.Memory](../../../../packages/nuget.org/system.memory/4.5.5)|4.5.5|
|[System.Memory](../../../../packages/nuget.org/system.memory/4.6.0)|4.6.0|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/6.0.0)|6.0.0|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/6.1.0)|6.1.0|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/6.1.2)|6.1.2|

*This page was generated by a tool.*